alterado o make para o main.c

--- a/mac300/ep1/Makefile
+++ b/mac300/ep1/Makefile
@@ -2,12 +2,16 @@ CC = gcc
 CFLAGS = -Wall -pedantic -ansi -g
 
 DEPS = input.o
+EXE = out
 
-all = DEPS
+all = EXE
 
 input.o: input.c
 	$(CC) $(CFLAGS) -c $^
 
+out: $(DEPS) main.c
+	$(CC) $(CFLAGS) $^ -o $@
+
 .PHONY = clear
 clear:
-	rm -rf *.o
+	rm -rf *.o a.out*
