adicionei a regra do cholesky

--- a/mac300/ep1/makefile
+++ b/mac300/ep1/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -pedantic -ansi -g
 
-DEPS = input.o
+DEPS = input.o cholesky.o
 
 all = exe
 
@@ -9,6 +9,9 @@ exe: $(DEPS) main.c
 	$(CC) $(CFLAGS) $^
 
 input.o: input.c
+	$(CC) $(CFLAGS) -c $^
+
+cholesky.o: cholesky.c
 	$(CC) $(CFLAGS) -c $^
 
 .PHONY = clear
